src/App.css
@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600&family=Poppins:wght@300;400;500;600&display=swap');

*{
    margin: 0;
    padding: 0;
}
body{
    font-family: 'Poppins', sans-serif;
    
    
}
html{
    scroll-behavior:smooth ;
}

@media(max-width: 480px){
    .App{
        width: 915px;
    }
    .nav-link{
        display:inline-block ;
        padding-left: 310px;
        
    }
    .f-2{
        display: inline-block;
        padding-left: 115px;
        
    }
  
 

}

